--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <main class="ltdl_container">
         <section class="ltdl_promo">
             <div class="ltdl_promo-img">
-                <img src="./mainbanner.jpg" alt="Digital R50" />
+                <img src="mainbanner.jpg" alt="Digital R50" />
             </div>
             <div class="ltdl_promo-img2">
-                <img src="./mac.jpg" alt="Digital R50" />
-                <img src="./3.jpg" alt="Digital R50" />
+                <img src="mac.jpg" alt="Digital R50" />
+                <img src="3.jpg" alt="Digital R50" />
             </div>
         </section>
 
@@ -87,4 +87,5 @@
     <script src="LTDL.js"></script>
 </body>
 </html>
+
 
